--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@babel/plugin-proposal-decorators": "latest",
     "@babel/preset-env": "latest",
     "@babel/preset-react": "latest",
-    "@material-ui/core": "latest",
+    "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "latest",
-    "@material-ui/lab": "latest",
-    "@material-ui/styles": "latest",
+    "@material-ui/lab": "^4.0.0-alpha.24",
+    "@material-ui/styles": "^4.3.3",
     "axios": "latest",
     "babel-loader": "latest",
     "babel-plugin-transform-imports": "latest",
@@ -19,30 +19,32 @@
     "css-loader": "latest",
     "enzyme": "latest",
     "enzyme-adapter-react-16": "latest",
-    "file-loader": "latest",
+    "file-loader": "^4.2.0",
     "handlebars": "latest",
     "history": "latest",
-    "jest": "latest",
+    "jest": "^24.9.0",
     "nodemon": "latest",
     "notistack": "latest",
     "prop-types": "latest",
-    "react": "latest",
+    "react": "^16.9.0",
     "react-currency-format": "^1.0.0",
-    "react-dom": "latest",
-    "react-hot-loader": "latest",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
+    "react-redux": "^7.1.0",
     "react-router-dom": "latest",
     "react-select": "latest",
-    "react-sortable-hoc": "latest",
-    "socket.io": "latest",
-    "socket.io-client": "latest",
-    "socket.io-react": "latest",
+    "react-sortable-hoc": "^1.10.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "socket.io-react": "^1.2.0",
     "style-loader": "latest",
     "typeface-roboto": "latest",
     "url-loader": "latest",
     "webfontloader": "latest",
-    "webpack": "latest",
-    "webpack-cli": "latest",
-    "webpack-dev-server": "latest"
+    "webpack": "^4.39.2",
+    "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +52,8 @@
     "dev": "nodemon -w webpack.config.js -x webpack-dev-server -- --progress -d --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "api": "python Server",
+    "website": "python Website",
     "watch": "webpack --progress -d --config webpack.config.js --watch"
   },
   "eslintConfig": {
@@ -68,6 +72,6 @@
     ]
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.7"
   }
 }
