--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "latest",
-    "@babel/plugin-proposal-class-properties": "latest",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "latest",
     "@babel/preset-env": "latest",
     "@babel/preset-react": "latest",
@@ -25,8 +25,8 @@
     "jest": "^24.9.0",
     "nodemon": "latest",
     "notistack": "latest",
-    "prop-types": "latest",
-    "react": "^16.9.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
@@ -37,8 +37,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "socket.io-react": "^1.2.0",
+    "socket.io-client": "^2.3.0",
     "style-loader": "latest",
     "typeface-roboto": "latest",
     "url-loader": "latest",
