--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@babel/plugin-proposal-decorators": "latest",
     "@babel/preset-env": "latest",
     "@babel/preset-react": "latest",
-    "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "latest",
-    "@material-ui/lab": "^4.0.0-alpha.24",
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.25",
     "@material-ui/styles": "^4.3.3",
     "axios": "latest",
     "babel-loader": "latest",
@@ -42,7 +42,7 @@
     "typeface-roboto": "latest",
     "url-loader": "latest",
     "webfontloader": "latest",
-    "webpack": "^4.39.2",
+    "webpack": "^4.39.3",
     "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
