--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.3.0",
+    "socket.io-react": "^1.2.0",
     "style-loader": "latest",
     "typeface-roboto": "latest",
     "url-loader": "latest",
